<resources>
    <string name="app_name">Budget</string>
    <string name="action_settings">Settings</string>
    <string name="statistics">Statistics</string>
    <string name="balance">Balance</string>
    <string name="account">Account</string>
    <string name="other">Other</string>
    <string name="change">Change</string>
    <string name="remove">Remove</string>
    <string name="account_name" translatable="false">Account Name</string>
    <string name="account_balance" translatable="false">Account Balance</string>
    <string name="account_currency" translatable="false">Account Currency</string>
    <string name="account_settings" translatable="false">Account Settings</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="currency">Currency</string>
    <string name="choose_currency">Choose Currency</string>
    <string name="account_incorrect_info">Incorrect data in account name or currency!</string>
    <string name="date">Date</string>
    <string name="category_setting">Category Setting</string>
    <string name="account_not_selected">Account Not Selected</string>
    <string name="income">Income</string>
    <string name="expenses">Expenses</string>
    <string name="add">Add</string>
    <string name="select_category">Select Category</string>
    <string name="add_category">Add Category</string>
    <string name="category_name">Category Name</string>
    <string name="cost_incorrect_info">cannot be 0 or less!</string>
    <string name="edit">Edit</string>
</resources>
