<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/account"
        android:enabled="true"
        android:icon="@drawable/account"
        android:title="@string/account"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/balance"
        android:enabled="true"
        android:icon="@drawable/currency_usd"
        android:title="@string/balance"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/statistic"
        android:enabled="true"
        android:icon="@drawable/chart_bar"
        android:title="@string/statistics"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/other"
        android:enabled="true"
        android:icon="@drawable/view_headline"
        android:title="@string/other"
        app:showAsAction="ifRoom"/>
</menu>