<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/account_settings_coordinator_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".activities.AccountSettingsActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_account"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout_account"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_account"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:title="@string/account_settings"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="45dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etAccountName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:imeActionLabel="Done"
            android:maxLines="1"
            android:maxLength="20"
            android:inputType="text"
            android:hint="@string/account_name" />
        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txtChooseCurrency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_currency"
                android:textStyle="bold"
                android:textSize="18sp"
                android:onClick="openCurrenciesChooser"/>
            <TextView
                android:id="@+id/tvSelectedCurrency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:onClick="openCurrenciesChooser"/>
        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>